k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage-prd
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: homepage
      app.kubernetes.io/instance: homepage-prd
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homepage
        app.kubernetes.io/instance: homepage-prd
    spec:
      containers:
      - name: homepage
        image: docker.io/jwbennet/homelab-homepage:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 0
            memory: 0
          limits:
            cpu: 500m
            memory: 128M
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
