k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage-prd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/instance: homepage-prd
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
